--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -190,17 +190,17 @@ ww1_germanrework.38.t:0 "Hollweg Objects to Naval Expansion"
 
 #Tirpitz promotes naval expansion
 ww1_germanrework.39.t:0 "Tirpitz Promotes Naval Expansion"
- ww1_germanrework.39.d:0 ""
+ ww1_germanrework.39.d:0 "Tirpitz has circumvented the chancellor and directly proposed to the Kaiser that German policy must focus on naval expansion if the empire is to survive. Wilhelm assured Tirpitz that he would do whatever was necessary to keep the empire safe, making no clear decision on policy, but it's clear that Wilhelm has yet to be convinced by Hollweg that the diplomatic effort to Britian will result in glory for Germany."
  ww1_germanrework.38.a:0 "Why build ships when you can build peace?"
 
 #Formation of the OHL
 ww1_germanrework.40.t:0 "Formation of the OHL"
- ww1_germanrework.40.d:0 ""
+ ww1_germanrework.40.d:0 "After the formation of the German Empire in 1871, the Prussian Army, Royal Saxon Army, Army of Württemberg and the Bavarian Army were autonomous in peacetime, each kingdom maintaining a separate war ministry and general staff to administer their forces. On the outbreak of war, the Constitution of the German Empire ensures that the German Emperor would be made commander-in-chief of the combined armies.\n\nWith the outbreak of war, the Oberste Heeresleitung is now the highest echelon of command of the Heer of the German Empire, led by general Moltke. The OHL is split into sections that will take control over different parts of the country, whilst also monitoring politics and taking over the economy to ensure production remains most efficient for the army.\n\nIn addition to the General Staff of the Field Army, the Supreme Army Command consists of the Emperor's Military Cabinet, the Intendant General (responsible for supply), senior advisers in various specialist fields (Artillery, Engineers, Medicine, Telegraphy, Munitions and Railways) and representatives from the four German War Ministries and representatives of the other Central Powers. "
  ww1_germanrework.40.a:0 "To war then"
 
 #The Centre Block
 ww1_germanrework.41.t:0 "The Centre Block"
- ww1_germanrework.41.d:0 ""
+ ww1_germanrework.41.d:0 "The Centre of Germany has been the dominant force in the Empire's governing politics since its creation. The centrists are led by the trusted Zentrum party who formed in 1870, went on to successfully battle against the Kulturkampf waged by Chancellor Otto von Bismarck against the Catholic Church. It soon won a quarter of the seats in the Reichstag, and its middle position on most issues allowed it to play a decisive role in the formation of majorities. However, there are plenty of centrist parties in Germany who seek to make moderate social reform whilst ensuring that German traditional values are kept.\n\nIf Germany is going to continue to be stable throughout the next decade, the centrists must keep their power in Germany so that a moderate amount of rightist and leftist laws are passed into the Bundestrat. Luckily, many of the key political figures in Germany, like Theobald von Bethmann Hollweg, support the centrists and have aided them in keeping their majority in the Reichstag. "
   ww1_germanrework.41.a:0 "Imperialism in moderation"
 
 #The Growing Pan-German Influence
@@ -212,27 +212,27 @@ ww1_germanrework.42.t:0 "The Matter of the Pan-Germans"
 
 #German/Belgian Colonial Event Chain #test out before making loc
 ww1_germanrework.15.t:0 "An Offer from the Kaiser"
- ww1_germanrework.15.d:0 ""
+ ww1_germanrework.15.d:0 "We have been approached by the German Colonial Administration with a proposition to increase the exploitation of Diamond deposits in both the German and Belgian Congo. This proposition will undoubtably help our economy along."
  ww1_germanrework.15.a:0 "Certainly, this will benefit us both"
  ww1_germanrework.15.b:0 "We won't work with those damn Krauts"
 
 ww1_germanrework.16.t:0 "Belgium Says Yes"
- ww1_germanrework.16.d:0 ""
+ ww1_germanrework.16.d:0 "Belgium has accepted our offer to increase the exploitation of the Diamond deposits, we can expect this to boost our economy as soon as we receive our first profits."
  ww1_germanrework.16.a:0 "This will work well for both nations"
 
 ww1_germanrework.17.t:0 "Belgium Refuses"
- ww1_germanrework.16.d:0 ""
+ ww1_germanrework.16.d:0 "Belgium has refused our offer to increase the exploitatation of the Diamond deposits, an unfourtuanate outcome."
  ww1_germanrework.16.a:0 "They can't say we never tried..."
 
 #Adressing the matter of the German Identity
 ww1_germanrework.43.t:0 "A 'German' Empire"
- ww1_germanrework.43.d:0 ""
+ ww1_germanrework.43.d:0 "Since the Frankfurt Parliament's creation, the issue of 'German' land occupied by Poles has been a forefront issue of the nation's claims. Whilst we have begun Germanisation efforts in the areas of the empire occupied by Danes and Poles, there is still a silent cultural resistance against our rule in these areas. This issue of minorities on German land has led to conflicts on how the minorities should be treated by the government, currently Polish and Danish minorities can apply for German citizenship, but some centrists and leftists, including Theobald von Bethmann Hollweg want to expand the rights of minorities to ensure they can claim the same insurances and state benefits than any other German citizens can. On the other hand, the rightist factions in the Reichstag have instead proposed that minority citizenship have their 'perks' reduced to allow the government to use more fund towards the betterment of 'real' Germans."
  ww1_germanrework.43.a:0 "Expand the citizenship"
  ww1_germanrework.43.b:0 "A German Empire for the Poles? I think not"
 
 #The State of the Navy
 ww1_germanrework.44.t:0 "The State of the Navy"
- ww1_germanrework.44.d:0 ""
+ ww1_germanrework.44.d:0 "The German Navy has rapidly expanded under admiral Tirpitz, who is the forefront believer that Germany must build a powerful navy to rival Britain for the Empire to survive in this new era. There have been four naval expansion bills under Kaiser Wilhelm II and it's likely that Tirpitz will try to pass a fifth.\n\nThe Navy stands strong but if we truly want to challenge Britain's naval dominance, we will need to invest far more into our naval production to match their might."
  ww1_germanrework.44.a:0 "Onwards, to our place in the sun"
 
 #Moltke having a stroke, poor guy
