--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1937,6 +1937,7 @@
  VICTORY_POINTS_3556: "Pinsk"
  VICTORY_POINTS_3452: "Elisavetgrad"
  VICTORY_POINTS_3376: "Yefremov"
+ VICTORY_POINTS_7477: "Krasnovodsk"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
