--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -237,7 +237,7 @@ ww1_germanrework.44.t:0 "The State of the Navy"
 
 #Moltke having a stroke, poor guy
 ww1_germanrework.46.t:0 "Moltke forced to retire"
- ww1_germanrework.46.d:0 ""
+ ww1_germanrework.46.d:0 "With the western front cementing into trench warfare, and our momentum being lost, the Chief of the Army, Moltke, has suffered a stroke. Moltke is set to recover but will no longer be fit to serve in the army under any capacity. He has been immediately 'retired' by the Kaiser who has selected Falkenhayn as the new Chief. Wilhelm and the general staff hope that Falkenhayn's more realistic approach to the war will help Germany to make gains on the Eastern front and perhaps even commit to a breakthrough in France."
  ww1_germanrework.46.a:0 "Well good luck to Falkenhayn"
 
 #Falk Removed
@@ -253,47 +253,47 @@ ww1_germanrework.48.t:0 "The Chancellor Pushes for Peace"
 #Portugals "Debt" Event Chain
 #Germany asks for UK support for pressuring Portugal to give over Angola to Germany
 ww1_germanrework.52.t:0 "A request from Germany"
- ww1_germanrework.52.d:0 ""
+ ww1_germanrework.52.d:0 "We've received a request from Germany, following the success of the Haldane mission, to support them in their demand to annex Angola from Portugal. Whilst Portugal has been our ally for some time, we did also promise to Germany we would support them in their colonial ambitions when we could... Leaving us in a predicament. However, the point has been made that if we back German it's more likely Portugal will peacefully agree to Germany's demands."
  ww1_germanrework.52.a:0 "Sure, we will help"
  ww1_germanrework.52.b:0 "Hell no!"
 #UK Accepted to help Germany
 ww1_germanrework.53.t:0 "The British Accepted"
- ww1_germanrework.53.d:0 ""
+ ww1_germanrework.53.d:0 "The British have decided to keep to the Haldane Agreement and support us diplomatically without demand to annex Angola. Now that we've secure British aid, we can send the demands immediately and begin the occupation of Angola."
  ww1_germanrework.53.a:0 "Great!"
 #UK Rejected to help Germany
 ww1_germanrework.54.t:0 "The British Rejected"
- ww1_germanrework.54.d:0 ""
+ ww1_germanrework.54.d:0 "The damned British fools have abandoned the Haldane Agreement, without their support it's a fool's game to try and demand Angola. Reportedly, the Kaiser is furious with his British cousin, publicly coming out to national newspapers slandering the royal family publicly - no doubt the rift between the UK and Germany is greater than every before."
  ww1_germanrework.54.a:0 "Insanity"
 #Portugal gets the Demands
 ww1_germanrework.55.t:0 "Germany Demands Angola"
- ww1_germanrework.55.d:0 ""
+ ww1_germanrework.55.d:0 "Earlier this morning, the German embassy alongside the British have given our government an ultimatum to hand over the colony of Angola to the German Empire with haste, as a form of 'debt' repayment to Germany. Out situation is dire, and Britain's support of Germany doesn't bode well for our chances of resisting. Many in the administration have simply declared we are left with little choice to concede... although we can always petition the French to help curb these, Krauts."
  ww1_germanrework.55.a:0 "We have no choice"
  ww1_germanrework.55.b:0 "Call the French for help immediately"
 #Germany is informed Portugal Accepted
 ww1_germanrework.56.t:0 "Portugal Gave Angola"
- ww1_germanrework.56.d:0 ""
+ ww1_germanrework.56.d:0 "Brillant news from abroad! Portugal has given into our demands to hand over Angola and our administration has begun to move into the colony. This victory has caused a positive uproar in Germany in support of the current government, with every newspaper worth a damn championing Hollweg's 'victory of the decade', suffice to say, we can bask in the scorching sun of Angola freely."
  ww1_germanrework.56.a:0 "A glorious diplomatic victory!"
 #UK is informed Portugal Accepted
 ww1_germanrework.57.t:0 "Portugal Gave Germany Angola"
- ww1_germanrework.57.d:0 ""
- ww1_germanrework.57.a:0 "Crisis solved"
+ ww1_germanrework.57.d:0 "Great news from Germany, they've confirmed that Portugal have handed over Angola to the German Colonial Administration. Our support of Germany has worked out for the best - we've avoided a larger crisis and appeased the Germany without distancing Portugal. However, we've already received angry complaints from the French foreign office on our support of Germany, it'll take some time to rebuild our trust with the French."
+ ww1_germanrework.57.a:0 "Another crisis solved"
 #Germany and UK are informed Portugal rejected and sent France diplomats
 ww1_germanrework.58.t:0 "Portugal sent diplomats to France"
- ww1_germanrework.58.d:0 ""
+ ww1_germanrework.58.d:0 "Worrying news from Portugal, they've yet to officially respond to the demands for the German annexation of Angola and have made a plea to the French for diplomatic backing. Whilst France may still yet refuse, forcing Portugal to back down, should France support Portugal it will take delicate handling to defuse the situation."
  ww1_germanrework.58.a:0 "Lets hope this doesn't escalate..."
 #France gets asked by Portugal to help
 ww1_germanrework.59.t:0 "Portuguese diplomats arrive in Paris"
- ww1_germanrework.59.d:0 ""
+ ww1_germanrework.59.d:0 "We've received a worrying plea from Portugal today, earlier this week they've been sent an ultimatum from Britain and Germany calling for the German annexation of Angola. Now Portugal calls for us to back them, and even protect them should the aggressors attempt to take Angola forcefully from them. Most of government is worried about possibly starting a war with the UK and the Central Powers, but at the same time German aggression must be kept in check."
  ww1_germanrework.59.a:0 "We must protect Portugal!"
  ww1_germanrework.59.b:0 "Who cares?"
 #France accepts to help, Germany has a choice to back down or not
 ww1_germanrework.60.t:0 "Portugal gets French Support!"
- ww1_germanrework.60.d:0 ""
+ ww1_germanrework.60.d:0 "France has come to the aid of Portugal and sent a clear message to us and the British that any action against Portugal is an action against France. Whilst backing down would be another diplomatic blunder, surely we can't risk war over Angola... even if the British continue to support us."
  ww1_germanrework.60.a:0 "We won't back down!"
  ww1_germanrework.60.b:0 "We have no choice"
 #France rejects to help, Portugal forced to back down
 ww1_germanrework.61.t:0 "France refuses to help!"
- ww1_germanrework.61.d:0 ""
+ ww1_germanrework.61.d:0 "Shit. France has refused our plea for help and now we've been left in a worse position than before. With pressure mounting on us to respond to the demands it seems we are forced to hand over Angola. We've been left to fend for ourselves and the German dog is ever hungry."
  ww1_germanrework.61.a:0 "We must back down"
 #UK asked if they'll join Germany against France
 ww1_germanrework.62.t:0 "Germany asks for help against France"
