romania content peak

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -512,21 +512,23 @@ ROM_placate_the_peasants:0 "Placate the Peasants"
 ROM_carpist_renaissance:0 "The Carpist Renaissance"
 ROM_placate_the_king:0 "Placate the King"
 ROM_strong_arm_parliament:0 "Strong Arm Parliament"
-ROM_victory_in_hungarian_war:0 "Victory against Hungary... again"
+ROM_victory_in_hungarian_war:0 "Victory Against Hungary... Again"
 ROM_rebuild_transylvania:0 "Rebuild Transylvania"
 ROM_ensure_hungarian_weakness:0 "Guarantee [HUN.GetAdjective] Weakness"
-ROM_realisation_of_greater_romania:0 "Realize Greater Romania"
+ROM_realisation_of_greater_romania:0 "România Mare"
+ROM_realisation_of_greater_romania_desc:0 "Romania has finally been unified into greatness, forming the Whole Romania, Entire Romania or as the people call it, România Mare."
 ROM_promote_romanian_language:0 "Promote the Romanian Language"
-ROM_defeat_in_hungarian_war:0 "Defeat against Hungary"
+ROM_defeat_in_hungarian_war:0 "Defeat Against Hungary"
 ROM_suppress_use_of_hungarian_in_szekelyfold:0 "Suppress Hungarian in [778.GetName]"
 ROM_invite_serbia_to_little_entente:0 "Invite [SER.GetName] to Little Entente"
 ROM_serbian_intervention_in_hungarian_conflict:0 "Seek [SER.GetAdjective] Intervention"
-
+ROM_romanianize_alfold:0 "Romanianize [154.GetName]"
 
 
 
 
 ## -- TOOLTIPS -- ##
+ROM_modify_supress_hung.tt:0 "§WModify §W§YSuppressed Hungarian Language§Y§W by \n£manpower_texticon Local manpower:§W§G +10%§G§W"
 ROM_serbia_little_entente_fail:0 "§W[SER.GetNameWithFlag] §W§Rrefuses§R§W to join the §W§YRomanian-Hungarian War§Y§W"
 depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
@@ -1003,8 +1005,9 @@ ww1_romania.81.t:0 "Hungarians do not back down from Versailles demarcation"
 ww1_romania.81.d:0 "The Hungarians still refuse to accept the new borders delivered to them by Ferdinand Vix."
 ww1_romania.81.a:0 "We need to intervene"
 ww1_romania.81.b:0 "We need to recover from the war first..."
-
-
+ww1_romania.108.t:0 "King Ferdinand delivers a speech to the people"
+ww1_romania.108.d:0 ""Romanians! The war which for the last two years has been encircling our frontiers more and more closely has shaken the ancient foundations of Europe to their depths. It has brought the day which has been awaited for centuries by the national conscience, by the founders of the Romanian State, by those who united the principalities in the war of independence, by those responsible for the national renaissance. It is the day of the union of all branches of our nation. Today we are able to complete the task of our forefathers and to establish forever that which Michael the Great was only able to establish for a moment, namely, a Romanian union on both slopes of the Carpathians."\n-King Ferdinand I of [ROM.GetName]"
+ww1_romania.108.a:0 "De la Nistru pana la Tisa!"
 ## -- IDEAS -- ##
 ROM_unionist_zeal:0 "Unionist Zeal"
 ROM_unionist_zeal_desc:0 "Ever since the unification in 1859 the dream of reuniting the romanian people from both sides of the Carphatians and those from over the Prut river has been the nation's dream, a Romania for romanians."
@@ -1075,12 +1078,12 @@ ROM_defense_of_danube2:0 "Defense of the Danube River"
 ROM_black_sea_fleet2:0 "The Romanian Black Sea Fleet"
 ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
 ROM_recently_raided:0 "Recently Raided"
-ROM_promoted_romanian_language:0 "Promoted Romanian Language"
 ROM_unionist_zeal2:0 "Unionist Zeal"
 ROM_occupation_costs_rom:0 "Central Powers Occupation Costs"
-
-
-
+ROM_suppressed_hungarian_language:0 "Suppressed Hungarian Language"
+ROM_suppressed_hungarian_language2:0 "Suppressed Hungarian Language"
+ROM_suppressed_hungarian_language_idea_research:0 "Suppressed Hungarian Language"
+ROM_suppressed_hungarian_language_idea_research2:0 "Promoting Romanian Language"
 
 
 ## -- DECISIONS -- ##
