bug fixes and workign on content

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1082,6 +1082,7 @@
  KONSTANTINOUPOLIS_STATE: "Konstantinoupoli"
  KALLIPOLI_STATE: "Kallipoli"
  KONSTANTINOPOL_STATE: "Konstantinopol"
+ KAHIRE_STATE:0 "Kahire"
  THESSALONIKI_STATE: "Thessaloniki"
  RAIDESTOS_STATE: "Raidestos"
  DARDANELLIA_STATE: "Dardanellia"
