--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2465,8 +2465,14 @@
  TUR_domestic_weapon_research_nsb_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
  TUR_domestic_weapon_research_nsb_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!\n"
  TUR_domestic_weapon_production_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+3.0%§!\n£defence_texticon  Division Defense: §G+3.0%§!\n\n"
- TUR_domestic_weapon_production_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: [?TUR_aoabe_army_attack_factor_tt|%G1]\n£defence_texticon  Division Defense: [?TUR_aoabe_army_defence_factor_tt|%G1]\n\n"
+ TUR_domestic_weapon_production_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: [?TUR_o4a_army_attack_factor_tt|%G1]\n£defence_texticon  Division Defense: [?TUR_o4a_army_defence_factor_tt|%G1]\n\n"
  TUR_domestic_weapon_production_tt3:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §R-3.0%§!\n£defence_texticon  Division Defense: §R-3.0%§!\n\n"
+ TRS_domestic_weapon_research_tt:0 "\nModify [TRS_cemal_army_new_army] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
+ TRS_domestic_weapon_research_nsb_tt:0 "\nModify [TRS_cemal_army_new_army] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
+ TRS_domestic_weapon_research_nsb_tt2:0 "\nModify [TRS_cemal_army_new_army] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!\n"
+ TRS_domestic_weapon_production_tt:0 "\nModify [TRS_cemal_army_new_army] by\n£attack_texticon  Division Attack: §G+3.0%§!\n£defence_texticon  Division Defense: §G+3.0%§!\n\n"
+ TRS_domestic_weapon_production_tt2:0 "\nModify [TRS_cemal_army_new_army] by\n£attack_texticon  Division Attack: [?TUR_o4a_army_attack_factor_tt|%G1]\n£defence_texticon  Division Defense: [?TUR_o4a_army_defence_factor_tt|%G1]\n\n"
+ TRS_domestic_weapon_production_tt3:0 "\nModify [TRS_cemal_army_new_army] by\n£attack_texticon  Division Attack: §R-3.0%§!\n£defence_texticon  Division Defense: §R-3.0%§!\n\n"
  TUR_has_land_connection_tt:0 "Has §Ydirect land connection§! to §Y[FROM.GetName]§! through §Yallied§! countries"
  TUR_has_land_connection_GER_tt:0 "Has §Ydirect land connection§! to §Y[GER.GetName]§! through §Yallied§! countries"
  TUR_investing_in_the_sick_man:0 "Investing in the Sick Man"
@@ -5756,8 +5762,8 @@
  TUR_increase_aswan_centralization_50:0 "Modify §YCentralization§! of §YAswan Vilayet§! by §G+50%§!\n"
  TUR_increase_khartoum_centralization_50:0 "Modify §YCentralization§! of §YKhartoum Vilayet§! by §G+50%§!\n"
  TUR_increase_suez_centralization_70:0 "Modify §YCentralization§! of §YSuez Vilayet§! by §G+70%§!\n"
- TUR_integrate_egyptian_economy_tt:0 "Has selected §YIntegrate Egyptian Elite§!\n"
- TUR_integrate_egyptian_society_tt:0 "Has selected §YIntegrate Egyptian Economy§!\n"
+ TUR_integrate_the_egyptian_economy_tt:0 "Has selected §YIntegrate Egyptian Elite§!\n"
+ TUR_integrate_the_egyptian_society_tt:0 "Has selected §YIntegrate Egyptian Economy§!\n"
  TUR_nationalized_suez_canal:0 "Nationalized Suez Canal"
  TUR_push_regulations_for_the_suez_canal_tt1:0 "Has selected §YNationalize the Suez Canal§!\n"
  TUR_push_regulations_for_the_suez_canal_tt2:0 "§YSuez Canal§! will be §Rblocked§! for countries with less than §R-50§! opinion.\n"
@@ -6203,6 +6209,26 @@
  TUR_blocked_famine_reduce_2_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+1.0%§!\n\n"
  TUR_blocked_famine_reduce_1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-0.5%§!\n£stability_texticon  Stability: §G+0.50%§!\n£stability_texticon  Weekly Stability Gain: §G+0.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+0.50%§!\n\n"
  TUR_blocked_famine_reduce_1_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+0.5%§!\n\n"
+ TUR_caliphs_authority_in_egypt:0 "Caliph's Authority in Egypt"
+ TUR_caliphs_authority_in_egypt_desc:0 "While Egypt has long desired independence from the Turkish rule, Muslim population of the country is still stand loyal to the Caliph. We can use the Caliph's popularity to legitimize our hold over Egypt."
+ TUR_integrate_the_egyptian_elite:0 "Integrate the Egyptian Elite"
+ TUR_integrate_the_egyptian_elite_desc:0 "Rooting control in a land goes through pulling the elite to ones side. As we offer the Egyptian elite various benefits of being our empire, they'll integrate into being a part of the greater [TUR.GetAdjective] elite over time."
+ TUR_integrate_the_egyptian_economy:0 "Integrate the Egyptian Economy"
+ TUR_integrate_the_egyptian_economy_desc:0 "Economy is an important part of the capabilities of a nation and the daily life. As the Egyptian economy integrates into our, it will be easier to assume control and direct the production in the country."
+ TUR_integrate_the_egyptian_society:0 "Integrate the Egyptian Society"
+ TUR_integrate_the_egyptian_society_desc:0 "As other parts of the Egyptian nation has been integrated to our empire, only the regular people remains to be integrated. As we have enough of the locals' favor and cooperation, we'll be able to make them a part of our great empire once and for all."
+ TUR_place_turks_in_administration:0 "Place Turks in Administration in [TUR_vilayet_name_list]"
+ TUR_place_turks_in_administration_desc:0 "While we've restored our rule in Egypt, most of the administration is still at the hands of the local Arabs. As they're not the most loyal to our empire, we'll switch their positions and put Turks in their places."
+ TUR_combat_separatism_in_egypt:0 "Combat Separatistm in [FROM.GetName]"
+ TUR_combat_separatism_in_egypt_desc:0 "Separatism and Arab nationalist fervour continues to be a problem in Egyptian lands we control. We must continuously combat against separatism untill its totally rooted out."
+ TUR_create_the_egyptian_autonomy:0 "Create the Egyptian Autonomy"
+ TUR_create_the_egyptian_autonomy_desc:0 "While our control has returned to Egypt, a vast majority of the population still doesn't accept our rule and will not do so for the foreseable future. Instead of pouring our precious recources to Egypt, we'll grant them local autonomy to appease them."
+ TUR_nationalize_the_suez_canal:0 "Nationalize the Suez Canal"
+ TUR_nationalize_the_suez_canal_desc:0 "While we've taken control of the Suez Canal zone, the foreign powers and international stakeholders still hold a great sway over the canal. By disregarding their shares, we'll be the only one to have say over the matters regarding the Suez Canal."
+ TUR_push_regulations_for_the_suez_canal:0 "Push Regulations for the Suez Canal"
+ TUR_push_regulations_for_the_suez_canal_desc:0 "As we're the sole authority over the Suez Canal, we can push any regulation we want. Knowing this, we'll rule no foreign nation is to be able to pass their navies through the canal. This way, we'll be the ones deciding who's able to pass through the Suez Canal."
+ TRS_move_capital_to_cairo:0 "Move Capital to [446.GetName]"
+ TRS_move_capital_to_cairo_desc:0 "As we stand as the Sultan of Egypt, we can freely move our capital to [446.GetName]. Doing so will greatly improve our legitimacy."
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
