--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4982,7 +4982,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.166.a:0 "Allah is punishing those French collaborators."
  ottoman.166.tt:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-70.0%§!\n\n"
  ottoman.167.t:0 "Accepting the [USA.GetAdjective] Aid"
- ottoman.167.d.0 "As Syria is struggling with the famine, the [USA.GetAdjective]s have extended a helping hand. To protect its people from starvation, [FROM.GetLeader] has asked permission from our government to accept the [USA.GetAdjective] offer. While accepting their help would mean owing obligation to them, refusing could give our state the image of being self sufficient."
+ ottoman.167.d:0 "As Syria is struggling with the famine, the [USA.GetAdjective]s have extended a helping hand. To protect its people from starvation, [FROM.GetLeader] has asked permission from our government to accept the [USA.GetAdjective] offer. While accepting their help would mean owing obligation to them, refusing could give our state the image of being self sufficient."
  ottoman.167.a:0 "Well-being of our people come first."
  ottoman.167.b:0 "We don't need foreign help."
  ottoman.168.t:0 "Central Committee Accepts [USA.GetAdjective] Aid"
