--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -725,7 +725,6 @@
  CANNOT_GUARANTEE_TO_OTTOMANS:0 "§R- [TUR.GetName] cannot get guaranteed.§!"
  TUR_anti_infidel_diplomacy:0 "Anti-Infidel Diplomacy"
  TUR_imperial_diplomacy:0 "Imperial Diplomacy"
- TUR_new_ottoman_army:0 "New Imperial Army"
  TUR_montly_remove_debt_0492:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-5.0%§! per month"
  TUR_weekly_remove_debt_0295:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-3.0%§! per week"
  TUR_recovering_man:0 "Recovering Man of Europe"
@@ -1069,16 +1068,21 @@
  TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%§!"
  TUR_committee_influence:0 "Committee Influence"
  TUR_committee_influence_desc:0 "The Central Committee is trying to increase its influence on our regional authority. While our authority is being undermined, the state's influence comes with its own benefits."
- TUR_ottoman_4th_army:0 "[ROOT.GetAdjective] 4th Army"
- TUR_ottoman_4th_army_desc:0 "When our commandeer Cemâl Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
- TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit]"
+ TUR_ottoman_4th_army:0 "[TRS_army_spirit]"
+ TUR_ottoman_4th_army_desc:0 "When our commandeer Cemâl Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the [ROOT.GetAdjective] 4th Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
+ TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit][TUR_national_research_institutes_tt]"
+ TRS_cemal_army_4th_ottoman_army:0 "[ROOT.GetAdjective] 4th Army"
+ TRS_cemal_army_new_army:0 "[TRS_cemal_army_new_army]"
+ TRS_cemal_army_new_ottoman_army:0 "New Ottoman Army"
+ TRS_cemal_army_new_republican_army:0 "New Republican Army"
+ TRS_cemal_army_new_djemali_army:0 "New Djemali Army"
  TRS_arab_opposition:0 "Arab Opposition"
  TRS_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
  TRS_independence_fervor:0 "Independence Fervor"
  TRS_independence_fervor_desc:0 "Opressive rule of the Ottoman government has built up to our very moment of revolt. The fresh desire for independence shall fuel our revolt, while it still lasts."
  TRS_local_shipyards:0 "Local Shipyards"
  TRS_local_shipyards_desc:0 "Our local governate depends on small civilian shipyards for its naval production. This results in a decrease in an overall dockyard output."
- TRS_local_shipyards_instant_desc:0 "§RWill be removed if any of our core states has a Naval Dockyard§!"
+ TRS_local_shipyards_instant_desc:0 "§RWill be removed if any controlled core state has a Naval Dockyard§!"
  TRS_syria_defense_plan:0 "Syria Defense Plan"
  TSR_syrian_defense_plan_desc:0 "As we're focusing on defending our Syrian lands rather than pushing towards Egypt, we'll form our tactics focused on holding our lines."
  TRS_egyptian_offensive:0 "Egyptian Offensive"
@@ -1722,15 +1726,15 @@ FRA_german_reparations:0 "German Reparations"
  CHI_reparation_from_france:0 "Reparations from [FRA.GetName]"
  CHI_reparation_from_france_desc:0 "We valiantly defended our territory against the imperialist views of France. The French government and its Indochina colony were forced to admit defeat and pay heavy reparations for an entire year."
 
- plus_6_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+6§!"
- plus_12_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+12§!"
- plus_18_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+18§!"
- plus_50_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+50§!"
- plus_100_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+100§!"
- plus_150_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+150§!"
- plus_150_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+200§!"
- plus_250_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+250§!"
- minus_50_percent_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §R-50%§!"
+ plus_6_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+6§!\n"
+ plus_12_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+12§!\n"
+ plus_18_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+18§!\n"
+ plus_50_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+50§!\n"
+ plus_100_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+100§!\n"
+ plus_150_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+150§!\n"
+ plus_150_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+200§!\n"
+ plus_250_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §Y+250§!\n"
+ minus_50_percent_bataillons_limit:0 "£battalion_limit_count_texticon  Batalion Count Limit: §R-50%§!\n"
 
  FRA_president_jules_pams:0 "President Jules Pams"
  FRA_edouard_vaillant:0 "President Edouard Vaillant"
