--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -527,9 +527,9 @@
  judicial_reformer:0 "Judicial Reformer"
  TUR_uncrowned_king:0 "Uncrowned King"
  railway_engineer:0 "Railway Engineer"
- TUR_sultan_of_egypt:0 "Sultan of Egypt"
  TUR_first_president_of_the_nation:0 "First President of the Nation"
  TUR_father_of_a_new_dynasty:0 "Father of a New Dynasty"
+ TUR_supreme_admiral:0 "Supreme Admiral"
  black_baron:0 "Black Baron"
  master_organizer:0 "Master Organizer"
  divided_coalition_leader:0 "Divided Coalition Leader"
