rename canadian strategic zone

--- a/localisation/english/replace/replace_strategic_region_names_l_english.yml
+++ b/localisation/english/replace/replace_strategic_region_names_l_english.yml
@@ -17,6 +17,7 @@
  STRATEGICREGION_39:0 "Galicia"
  STRATEGICREGION_40:1 "Central Chernozem Region"
  STRATEGICREGION_116:0 "Persia"
+ STRATEGICREGION_122:0 "Pacific Canada"
  STRATEGICREGION_124:0 "New Granada"
  STRATEGICREGION_130:0 "Malorossiya"
  STRATEGICREGION_131:0 "Belorussiya"
