--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -470,7 +470,7 @@
  STATE_469: "Saskatchewan"
  STATE_470: "Alberta"
  STATE_471: "Yukon"
- STATE_472: "Northern Canada"
+ STATE_472: "Northwest Territories"
  STATE_473: "British Columbia"
  STATE_474: "Yucatan"
  STATE_475: "Chiapas"
