Ungava and Labrador

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -330,7 +330,7 @@
  STATE_329: "Tannu Uriankhai"
  STATE_330: "Outer Mongolia"
  STATE_331: "Newfoundland"
- STATE_332: "Labrador"
+ STATE_332: "Labrador Coast"
  STATE_333: "Sarawak"
  STATE_334: "Kalimantan"
  STATE_335: "Java"
@@ -1050,6 +1050,8 @@
  STATE_1049: "Orange Free State"
  STATE_1050: "Skeleton Coast"
  STATE_1051: "Riau-Lingga"
+ STATE_1052: "Ungava"
+ STATE_1053: "Labrador"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
