--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -910,19 +910,23 @@
  TUR_army_of_the_modern_era_desc:0 "Recent army modernizations has proven to be a success for our armed forces. As our army is set to modern standards, we're a force to be reckoned with even for the Western powers."
  TUR_donanma_yi_humayun:0 "Donanma-yı Humâyûn"
  TUR_donanma_yi_humayun_desc:0 "Though we have modern ships, we lack the capabilities to effectively man them up. If we manage to tackle the problems about the organization of our navy, we can use it more effectively."
- TUR_havacilik_komisyonu:0 "[TUR_havacilik_komisyonu_name]"
+ TUR_havacilik_komisyonu:0 "[TUR_havacilik_komisyonu]"
+ TUR_havacilik_komisyonu_name:0 "[TUR_havacilik_komisyonu_name]"
  TUR_havacilik_komisyonu_desc:0 "[TUR_havacilik_komisyonu_name_desc]"
  TUR_havacilik_komisyonu_name_1:0 "Osmanlı Tayyare Bölükleri"
  TUR_havacilik_komisyonu_name_1_desc:0 "Founded in the recent years, Ottoman aviation squadrons has been established with the aim of improving aviation in the empire. Through reforms and innovations, we'll be able to improve our aviation squadrons."
  TUR_havacilik_komisyonu_name_2:0 "Kuva-yı Havaiye Müfettiş-i Umumiliği"
  TUR_havacilik_komisyonu_name_2_desc:0 "Recently organized into General Inspectorate of Air Forces, which was previously known as Ottoman aviation squadrons has been established with the aim of improving aviation in the empire. Through reforms and innovations, we'll be able to improve our aviation squadrons."
+ TUR_havacilik_komisyonu_new:0 "[TUR_havacilik_komisyonu_new]"
+ TRS_havacilik_komisyonu_republican:0 "Türkiye Tayyare Bölükleri"
+ TRS_havacilik_komisyonu_djemali:0 "Cemâlli Tayyare Bölükleri"
+ TUR_havacilik_komisyonu_tt:0 "[TUR_independent_aircraft_research_tt][TUR_domestic_aircraft_industry_tt]"
  TUR_army_of_a_bygone_era_tt:0 "[TUR_national_research_institutes_tt]"
  TUR_national_research_institutes_tt_yes:0 "£research_speed_equipment_texticon  Weapons and Equipment Research Speed: §G+10%§! \n£research_speed_artillery_texticon  Artillery Research Speed: §G+10%§! \n£research_speed_motorised_texticon  Motorization Research Speed: §G+10%§! \n£research_speed_tank_texticon  Armor Research Speed: §G+10%§! \n"
  TUR_donanma_yi_humayun_tt:0 "[TUR_increased_naval_research_tt][TUR_more_resources_for_the_naval_industry_tt][TUR_increased_ship_production_tt]"
  TUR_increased_naval_research_tt_yes:0 "£research_speed_battery_texticon  Ship Modules Research Speed: §G+15%§! \n£research_speed_naval_texticon  Naval Research Speed: §G+15%§! \n"
  TUR_more_resources_for_the_naval_industry_tt_yes:0 "§YCapital Ships§!:\n   £production_cost Production Cost: §R+25.00%§! \n   £armor_texticon  Armor: §G+10%§! \n   £hard_attack_texticon  Heavy Attack: §G+10%§! \n§YScreens§!:\n   £production_cost Production Cost: §R+25.00%§! \n   £armor_texticon  Armor: §G+10%§! \n   £soft_attack_texticon  Light Attack: §G+10%§! \n§YSubmarine§!:\n   £production_cost Production Cost: §R+25.00%§! \n   £armor_texticon  Armor: §G+10%§! \n   £soft_attack_texticon  Light Attack: §G+10%§! \n"
  TUR_increased_ship_production_tt_yes:0 "§YCapital Ships§!:\n   £production_cost Production Cost: §G-25.00%§! \n   £armor_texticon  Armor: §R-15%§! \n   £hard_attack_texticon  Heavy Attack: §R-10%§! \n§YScreens§!:\n   £production_cost Production Cost: §G-25.00%§! \n   £armor_texticon  Armor: §R-15%§! \n   £soft_attack_texticon  Light Attack: §R-10%§! \n§YSubmarine§!:\n   £production_cost Production Cost: §G-25.00%§! \n   £armor_texticon  Armor: §R-15%§! \n   £soft_attack_texticon  Light Attack: §R-10%§! \n"
- TUR_havacilik_komisyonu_tt:0 "[TUR_independent_aircraft_research_tt][TUR_domestic_aircraft_industry_tt]"
  TUR_independent_aircraft_research_tt_yes:0 "£research_speed_texticon  Air Research Speed: §G+15%§! \n"
  TUR_domestic_aircraft_industry_tt_yes:0 "§YFighter§!: £production_cost Production Cost: §G-10.00%§! \n§YGround Attack Plane§!: £production_cost Production Cost: §G-10.00%§! \n§YLight Bomber§!: £production_cost Production Cost: §G-10.00%§! \n"
  TUR_the_sublime_realm:0 "Sublime Realm"
