--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -469,7 +469,7 @@
  STATE_468: "Saint Lawrence"
  STATE_469: "Saskatchewan"
  STATE_470: "Alberta"
- STATE_471: "Yukon"
+ STATE_471: "Yukon Territory"
  STATE_472: "Northwest Territories"
  STATE_473: "British Columbia"
  STATE_474: "Yucatan"
